Agrega funcion para detectar escalera pequeña y escalera grande

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       </div>
 
       <p class="rounds-text">
-        <strong>Rolls:</strong> <span id="current-round-rolls">0</span> |
-        <strong>Round:</strong> <span id="current-round">1</span>
+        <strong>Tiradas:</strong> <span id="current-round-rolls">0</span> |
+        <strong>Rondas:</strong> <span id="current-round">1</span>
       </p>
 
       <div id="score-options">
